--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
-    "react": "^.2.0",
-    "react-dom": "^2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "wagmi": "^2.5.7",
     "viem": "^2.7.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.16",
-    "postcss": "^8.3.32",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.4.3"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
