--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "viem": "^2.7.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.1
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
