--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "autoprefixer": "^10.4.1
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.
   }
 }
