--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.1
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4
+    "tailwindcss": "
     "typescript": "^5.3.
   }
 }
