--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "autoprefixer": "^10.4.1
     "postcss": "^8.4.32",
     "tailwindcss": "
-    "typescript": "^5.3.
+    "typescript": "^
   }
 }
