--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
+    "build": "next build
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
