--- a/package.json
+++ b/package.json
@@ -364,6 +364,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.
+    "postcss":
     "tailwindcss": "^3.4.0",
     "types
