--- a/package.json
+++ b/package.json
@@ -363,7 +363,7 @@
     "viem": "^2.7.6"
   },
   "dev
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4
     "postcss":
     "tailwindcss": "^3.4.0",
     "types
