--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+I'm{
   "name": "base-dapp",
   "private": true,
   "version": "1.0.0",
@@ -19,7 +19,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build
+    "build": "next buil
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
