--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@ I'm{
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev"
     "build": "next build",
     "start": "next start"
   },
