--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@ I'm{
   "name": "base-dapp",
   "private": true,
   "version": "1.0.0",
-  "scripts": {
+  "scripts"
     "dev": "next dev",
     "build": "next buil
   "dependencies": {
