--- a/package.json
+++ b/package.json
@@ -340,10 +340,5 @@ I'm{
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
-  }
-}
-
-
-{
+    "typescript": 
   "
