--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@ uI'm{
   "private": true,
   "version": "1.0.0",
   "scripts"
-    "dev": "next dev",
+    "dev": "next dev
     "build": "next buil
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
