--- a/package.json
+++ b/package.json
@@ -205,7 +205,7 @@ uI'm{
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18
     "wagmi": "^2.5.7",
     "viem": "^2.7.6"
   },
