--- a/package.json
+++ b/package.json
@@ -199,7 +199,7 @@ uI'm{
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next 
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
