--- a/package.json
+++ b/package.json
@@ -159,7 +159,7 @@ uI'm{
     "viem": "^2.7.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
