--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@ uI'm{
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": ",
     "start": "next start"
   },
   "dependencies": {
