--- a/package.json
+++ b/package.json
@@ -333,7 +333,5 @@ uI'm{
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wagmi": "^2.5.7",
-    "viem": "^2.7.6"
-  },
+    "wagmi": "^2.5.7"
   "dev
