--- a/package.json
+++ b/package.json
@@ -332,6 +332,6 @@ uI'm{
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-,
     "wagmi": "^2.5.7"
   "dev
