--- a/package.json
+++ b/package.json
@@ -332,5 +332,4 @@ uI'm{
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-,
-    "wag
+    "react
