--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@ uI'm{
   "version": "
   "sc
     "dev": "next dev
-    "build": "next buil
+    "build": 
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
