--- a/package.json
+++ b/package.json
@@ -135,11 +135,7 @@ uI'm{
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3"
-  }
-}
-
-
+    "typescript": "^5.
 {
   "name": "base-dapp",
   "private": true,
