--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@ uI'm{
   "sc
     "dev": "next dev
     "build": 
-  "dependencies": {
+  "dependencies": 
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
     "react": "^18.2.0",
