--- a/package.json
+++ b/package.json
@@ -308,7 +308,7 @@ uI'm{
     "wagmi": "^2.5.7",
     "viem": "^2.7.6"
   },
-  "devDependencies": {
+  "devDependencies": 
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0
