--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@ uI'm{
     "start": "next start"
   },
   "dependencies": 
-    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@rainbow-me/rainbowkit": "^2.0.0"
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
