--- a/package.json
+++ b/package.json
@@ -324,5 +324,5 @@
     "start": "next start"
  
   "dependencis": 
-    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@rainbow-me/rainbowkit": "^2.0.0
   
