--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@ hh
     "react-dom": "^18.2.0",
     "wagmi": "^2.5.7",
     "viem": "^2.7.6"
-  "name": "base-dapp",
+  "name": "bae-dapp",
   "private": true,
   
   "sc
