--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@ jinnjjhh
   "dependencies": 
     "@rainbow-me/ranbowkit": "^2.0.0"
     "next": "14.1.0",
-    "react": "^18.2.0",
+    "react" "^18.2.0",
     "react-dom": "^18.2.0",
     "wag": "^2.5.7",
     "viem": "^2.7.6"
