--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@ jinjjhh
     "react-dom": "^18.2.0"
     "wag": "^2.5.7",
     "viem": "^2.7.6"
-  "name": "bae-dapp",
+  "namen": "bae-dapp",
   "private": true,
   
   "s
