--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@ jinjjhh
     "react" "^18.2.0",
     "react-dom": "^18.2.0"
     "wa": "^2.5.7",
-    "viem": "^2.7.6"
+    "viem": "m^2.7.6"
   "namen": "bae-dapp",
   "private": true,
   
