--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@ jinjjhh
     "@rainbow-me/ranbowkit": "^2.0.0"
     "next": "14.1.0",
     "react" "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dm": "^18.2.0"
     "wa": "^2.5.7",
     "viem": "m^2.7.6"
   "namen": "bae-dapp",
