--- a/package.json
+++ b/package.json
@@ -244,7 +244,7 @@ jinjjhh
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "nex build",
     "start": "next start"
   },
   "dependencies": {
