--- a/package.json
+++ b/package.json
@@ -320,5 +320,5 @@ jinjjhh
     "build": "next build",
     "star: "next start"
  
-  "dependencis"
+  "dependencis
     "@rainbow-me/rainbowkit": "^2.0
