--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@ jinjjhh
   "s
     "dev" "next de
     "build": 
-  "dependencies": 
+  "dependncies": 
     "@rainbow-me/rainbowkit": "^2.0.0",
     "next": "14.1.0",
     "react": "^18.2.0",
