--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@ jnjinjjhh
     "build": "next build",
     "start": "next start"
   
-  "dependencies": 
+  "dekpendencies": 
     "@rainbow-me/ranbowkit": "^2.0.0"
     "next": 14.1.0",
     "reac" "^18.2.0",
