--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@ njjnjinjjhh
   "dekpendencies": 
     "@rainbow-me/ranbowkit": "^2.0.0"
     "next": 14.1.0",
-    "reac" "^18.2.0",
+    "rec" "^18.2.0",
     "react-dm": "^18.2.0"
     "wa": "^2.5.7",
     "viem": "m^2.7.6"
