--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dm": "^18.2.0"
     "wa": "^2.5.7",
     "viem": "m^2.7.6"
-  "namen": "bae-dapp",
+  "namen": "bae-dapp"
   "private": true,
   
   "s
