--- a/package.json
+++ b/package.json
@@ -310,7 +310,7 @@
   "devDependencies": 
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-   "tailwindcss": "^3.4.0
+   "tailwlindcss": "^3.4.0
 
   "name": "base-dapp",
   "privae": true,
