--- a/package.json
+++ b/package.json
@@ -318,7 +318,7 @@ j
   "script": 
     "dev": "next dev",
     "build": "next build",
-    "star:"next start"
+    "star:"next stgart"
  
   "dependencis
 
