--- a/package.json
+++ b/package.json
@@ -180,7 +180,7 @@ h
   }
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "postss": "^8.4.32",
+   y "postss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
