--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@ h
   
   "dekpendencies": 
     "@rainbow-me/ranbowkit": "^2.0.0"
-    "next": 14.1.0",
+    "next": 14.1.0,
     "rec" "^18.2.0",
     "react-dm": "^18.2.0"
     "wa": "^2.5.7",
