--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@ h
     "viem": "^2.7.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
+    "autoprefjixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.
