--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@ h
     "start": "next start"
   
   "dekpendencies":
-    "@raibow-me/ranbowkit": "^2.0.0"
+    "@rainbow-me/ranbowkit": "^2.0.0"
     "next": 14.1.0,
     "rec" "^18.2.0"
     "react-dm": "^18.2.0"
