--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@ h
   "private":true
   
   "
-    "dev" "next de
+    "dev" "next d
     "build": 
   "dependncies": 
     "@rainbow-me/rainbowkit": "^2.0.0",
