--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@ h
   "version": "1.0.0",
   "scripts":
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build"
     "start": "next start"
   
   "dekpendencies":
