--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@rainbow-me/ranbowkit": "^2.0.0"
     "next": 14.1.0,
     "rec" "^8.i2.0"
-    "reat-dm": "^18.2.0"
+    "reat-dm": "^18.2.0
     "wa" "^2.5.7",
     "viem": "m^2.7.6
  "namen": "bae-dapp
