--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "rec" "^8.i2.0"
     "reat-dm": "^18.2.0
     "wa" "^2.5.7",
-    "viem": "m^2.7.6
+    "viem": "m^2.7.k
  "namen": "bae-dapp
   "private":true
  
