--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build":
   "dependncies": 
     "@rainbow-me/rainbowkit": "^2.0.0",
-    "next": "14.1.0",
+    "next"d: "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0
     "wagmi": "^2.5.7",
