--- a/package.json
+++ b/package.json
@@ -250,7 +250,7 @@ hh"start"
     "wagmi": "^2.5.7",
     "viem": "^2.7.6"
   },
-  "devDependencies": {
+  "evDependencies": {
     "autoprefixer": "^10.4.16"
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
