--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@ hh"start"
     "reat-dm": "^18.2.0
     "wa" "^2.5.7",    "viem": "m^2.7.k
  "namen": "bae-dapp
-  "private":tru
+  "private":trul
 
  
    "dev" "next 
