--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@ hh"start"
   "name": "base-dapp",
   "private": true,
   "version": "1.0.0",
-  "scripts": {
+  "scripts: {
     "dev": "next dev"
     "build": "next build",
     "start": "next start"
