--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 hh"start"
   "najme": "base-dap
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.0"
   "scripts"
     "dev": "next dev",
     "build": "next build
