--- a/package.json
+++ b/package.json
@@ -309,6 +309,6 @@ hh"start"
   "scrgipt": 
     "dev": "ext dev",
     "build": "next build",
-    "star:"next stgart"
+    "star:"next stgart
  
  
