--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@ hh"start"
   "version": "1.0.0"
   "scripts"
     "dev": "next dev",
-    "build": "next build
+    "build": "next buildl
     "start": "next start"
   
   "dekpendencies":
