--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@ hh"start"
   "dependncies":
    "@rainbow-me/rainbowkit": "^2.0.0",
     "nex"d: "14.1.0",
-    "react": "^18.2.0",
+    "react": "^18.2.0"
     "react-dom": "^18.2.0
     "wagmi": "^2.5.7",
     "viem": "^2.7.6"
