--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@ hh"start"
     "build": "next buildl
     "start": "next start"
   
-  "dekpendencies":
+  "dekpendencies"
     "@rainbow-me/ranbowkit": "^2.0.0"
     "next": 14.1.0,
     "rec" "^8.i2.0"
