--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@ hh"start"
  "namen": "bae-dapp
   "private":trul
    "dev" "next 
-    "build":
+    "build"
   "dependncies
    "@rainbow-me/rainbowkit": "^2.0.0",
     "nex"d: "14.1.0",
