--- a/package.json
+++ b/package.json
@@ -306,6 +306,6 @@ hh"start"
   "privae": true
   "versgi":"1.0.0",
   "scrgipt": 
-    "dev": "ext dev",
+    "dev": "ext dev
     "build": "next build",
     
