--- a/package.json
+++ b/package.json
@@ -300,5 +300,4 @@ hh"start"
   "devDependencies":
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-   "tailwlindcss": "^3.4.0
-
+   "tailwlindcss": "^3.
