--- a/package.json
+++ b/package.json
@@ -300,4 +300,4 @@ hh"start"
   "devDependencies":
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-   "tailwlindcss": "
+   "tailwlindcss
