--- a/package.json
+++ b/package.json
@@ -295,7 +295,5 @@ hh"start"
     "react": "^18.2.0",
     "react-dom": "^1
     "wagmi": "^2.5.7",
-   "viem": "^2.7.6"
- 
- 
+   "viem": "^2.7.
   
