--- a/package.json
+++ b/package.json
@@ -277,7 +277,5 @@ hh"start"
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.3
-
- 
+    "typescript
  
