--- a/package.json
+++ b/package.json
@@ -276,5 +276,4 @@ hh"start"
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
- 
+    "tailwind
